minor changes: made the site better

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Geometry Dash Home Page</title>
 </head>
 <body>
-    <h1>Hello World !</h1>
+    <h1>Hello Nigga !</h1>
 </body>
 </html>
