feat(logo): added logo image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Geometry Dash Home Page</title>
 </head>
 <body>
-    <h1>Hello World !</h1>
+    <header>
+        <div id="dlButton">
+            <button>Télécharger</button>
+        </div>
+        <div id="headerLogo">
+            <img src="./img/GJ_logo_001.png"
+        </div>
+    </header>
 </body>
 </html>
