feat(index): update header and add main content section

--- a/index.html
+++ b/index.html
@@ -8,12 +8,35 @@
 </head>
 <body>
     <header>
-        <div id="dlButton">
-            <button>Télécharger</button>
+        <div class="dlButton">
+            <button>Download</button>
         </div>
         <div id="headerLogo">
-            <img src="./img/GJ_logo_001.png"
+            <img src="./img/GJ_logo_001.webp">
         </div>
     </header>
+    <main>
+        <div id="carrousel">
+            <img src="">
+        </div>
+
+        <div>
+            <h2>
+                The 2.2 is here !
+            </h2>
+            <ul>
+                <li>New game mode: Swing</li>
+                <li>New game type: Platformer</li>
+                <li>Over 700 new icons and 100 new achievements</li>
+                <li>Add sound effects to levels with SFX Library, and new music library</li>
+                <li>Shader Effects</li>
+                <li>Camera Controls</li>
+                <li>Gradient, Area, Rotate Gameplay, Scale, Random, and over 80 other new triggers</li>
+            </ul>
+            <p>... And many more ...</p>
+            <p><a href="https://store.steampowered.com/news/app/322170/view/3884982211363257387">Check this out !</a></p>
+        </div>
+        
+    </main>
 </body>
 </html>
