feat(index): add trailer section with embedded YouTube video

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             <p><a href="https://store.steampowered.com/news/app/322170/view/3884982211363257387">Check this out !</a></p>
         </div>
         
+        <div id="trailer">
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/k90y6PIzIaE?si=s3FWPg9mZ4Jz5V7C" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
         <div id="availbleOn">
             <h3>
                 Availible on :
