--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Geometry Dash Home Page</title>
+    <link rel="stylesheet" href="./dist/style.css">
+    <title>GD | Home</title>
 </head>
 <body>
     <header>
@@ -40,3 +40,4 @@
     </main>
 </body>
 </html>
+
