--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./dist/style.css">
     <title>Geometry Dash Home Page</title>
 </head>
 <body>
-    <h1>Hello World !</h1>
+    <div class="carousel">
+        <div class="carousel-track">
+          <img src="./dist/Caroussel/image1.webp" alt="Image 1">
+          <img src="./dist/Caroussel/image2.webp" alt="Image 2">
+          <img src="./dist/Caroussel/image3.webp" alt="Image 3">
+          <img src="./dist/Caroussel/image4.webp" alt="Image 4">
+          <img src="./dist/Caroussel/image5.webp" alt="Image 5">
+          <img src="./dist/Caroussel/image6.webp" alt="Image 6">
+          <img src="./dist/Caroussel/image7.webp" alt="Image 7">
+          <img src="./dist/Caroussel/image8.webp" alt="Image 8">
+          <img src="./dist/Caroussel/image9.webp" alt="Image 9">
+          <!-- Duplication pour l'effet infini -->
+          <img src="./dist/Caroussel/image1.webp" alt="Image 1">
+          <img src="./dist/Caroussel/image2.webp" alt="Image 2">
+          <img src="./dist/Caroussel/image3.webp" alt="Image 3">
+          <img src="./dist/Caroussel/image4.webp" alt="Image 4">
+          <img src="./dist/Caroussel/image5.webp" alt="Image 5">
+          <img src="./dist/Caroussel/image6.webp" alt="Image 6">
+          <img src="./dist/Caroussel/image7.webp" alt="Image 7">
+          <img src="./dist/Caroussel/image8.webp" alt="Image 8">
+          <img src="./dist/Caroussel/image9.webp" alt="Image 9">
+        </div>
+    </div>      
 </body>
 </html>
