(feat): ajout du carroussel

--- a/index.html
+++ b/index.html
@@ -17,8 +17,28 @@
         </div>
     </header>
     <main>
-        <div id="carrousel">
-            <img src="">
+        <div class="carousel">
+            <div class="carousel-track">
+              <img src="./dist/Caroussel/image1.webp" alt="Image 1">
+              <img src="./dist/Caroussel/image2.webp" alt="Image 2">
+              <img src="./dist/Caroussel/image3.webp" alt="Image 3">
+              <img src="./dist/Caroussel/image4.webp" alt="Image 4">
+              <img src="./dist/Caroussel/image5.webp" alt="Image 5">
+              <img src="./dist/Caroussel/image6.webp" alt="Image 6">
+              <img src="./dist/Caroussel/image7.webp" alt="Image 7">
+              <img src="./dist/Caroussel/image8.webp" alt="Image 8">
+              <img src="./dist/Caroussel/image9.webp" alt="Image 9">
+              <!-- Duplication pour l'effet infini -->
+              <img src="./dist/Caroussel/image1.webp" alt="Image 1">
+              <img src="./dist/Caroussel/image2.webp" alt="Image 2">
+              <img src="./dist/Caroussel/image3.webp" alt="Image 3">
+              <img src="./dist/Caroussel/image4.webp" alt="Image 4">
+              <img src="./dist/Caroussel/image5.webp" alt="Image 5">
+              <img src="./dist/Caroussel/image6.webp" alt="Image 6">
+              <img src="./dist/Caroussel/image7.webp" alt="Image 7">
+              <img src="./dist/Caroussel/image8.webp" alt="Image 8">
+              <img src="./dist/Caroussel/image9.webp" alt="Image 9">
+            </div>
         </div>
 
         <div id="changeLog">
