--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     <li>Camera Controls</li>
                     <li>Gradient, Area, Rotate Gameplay, Scale, Random, and over 80 other new triggers</li>
                 </ul>
-                <p>... And many more ...</p>
-                <p><a href="https://store.steampowered.com/news/app/322170/view/3884982211363257387">Check this out !</a></p>
+                <p id="teasing">... And many more ...</p>
+                <p id="seeCL"><a href="https://store.steampowered.com/news/app/322170/view/3884982211363257387">Check this out !</a></p>
             </div>
             
             <div id="trailer">
